# CustomString

./: CMakeLists.txt  README.md
src/: customstring.hpp  main.cpp
